--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "opencage-api-client": "^0.10.0"
   }
 }
